--- a/Liarodon/Timeline/Timeline.storyboard
+++ b/Liarodon/Timeline/Timeline.storyboard
@@ -12,7 +12,7 @@
         <!--Timeline-->
         <scene sceneID="QWi-bO-s8C">
             <objects>
-                <tableViewController id="R3Z-uQ-WeX" customClass="TimelineTableViewController" customModule="Liarodon" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="TimelineViewController" id="R3Z-uQ-WeX" customClass="TimelineTableViewController" customModule="Liarodon" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="281" sectionHeaderHeight="28" sectionFooterHeight="28" id="vax-5H-8qa">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -25,6 +25,14 @@
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="248.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
+                                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" editable="NO" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aAt-Ca-Wmo">
+                                            <rect key="frame" x="76" y="44" width="236" height="177.5"/>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <edgeInsets key="layoutMargins" top="0.0" left="0.0" bottom="0.0" right="0.0"/>
+                                            <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </string>
+                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                        </textView>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="user" translatesAutoresizingMaskIntoConstraints="NO" id="kom-Ot-Ng1">
                                             <rect key="frame" x="8" y="8" width="60" height="60"/>
                                             <constraints>
@@ -58,35 +66,55 @@
                                         </label>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jek-tu-mNf">
                                             <rect key="frame" x="76" y="211" width="24" height="22"/>
-                                            <state key="normal" title="1" image="tab-federated">
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="22" id="3FR-NR-5Ol"/>
+                                                <constraint firstAttribute="width" constant="24" id="pG0-W9-8U3"/>
+                                            </constraints>
+                                            <state key="normal" image="reply">
                                                 <color key="titleColor" red="0.29803922770000002" green="0.29803922770000002" blue="0.29803922770000002" alpha="1" colorSpace="calibratedRGB"/>
                                             </state>
+                                            <connections>
+                                                <action selector="replyButtonTapped:" destination="cHh-EG-Sy4" eventType="touchUpInside" id="pS7-iW-muX"/>
+                                            </connections>
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bad-6f-WBV">
-                                            <rect key="frame" x="130" y="211" width="24" height="22"/>
-                                            <state key="normal" title="1" image="tab-federated">
+                                            <rect key="frame" x="140" y="211" width="24" height="22"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="24" id="IKE-XS-MYb"/>
+                                                <constraint firstAttribute="height" constant="22" id="NG2-qG-7cD"/>
+                                            </constraints>
+                                            <state key="normal" image="boost">
                                                 <color key="titleColor" red="0.29803922770000002" green="0.29803922770000002" blue="0.29803922770000002" alpha="1" colorSpace="calibratedRGB"/>
                                             </state>
+                                            <connections>
+                                                <action selector="reblogButtonTapped:" destination="cHh-EG-Sy4" eventType="touchUpInside" id="iqF-3X-SFb"/>
+                                            </connections>
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ihX-K8-OTz">
-                                            <rect key="frame" x="184" y="211" width="24" height="22"/>
-                                            <state key="normal" title="1" image="tab-federated">
+                                            <rect key="frame" x="204" y="211" width="24" height="22"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="24" id="7di-Fg-FGb"/>
+                                                <constraint firstAttribute="height" constant="22" id="QQG-iL-Cak"/>
+                                            </constraints>
+                                            <state key="normal" image="favourite">
                                                 <color key="titleColor" red="0.29803922770000002" green="0.29803922770000002" blue="0.29803922770000002" alpha="1" colorSpace="calibratedRGB"/>
                                             </state>
+                                            <connections>
+                                                <action selector="favouriteButtonTapped:" destination="cHh-EG-Sy4" eventType="touchUpInside" id="rpS-Fr-Qhg"/>
+                                            </connections>
                                         </button>
-                                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" editable="NO" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aAt-Ca-Wmo">
-                                            <rect key="frame" x="76" y="44" width="236" height="177.5"/>
-                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                            <edgeInsets key="layoutMargins" top="0.0" left="0.0" bottom="0.0" right="0.0"/>
-                                            <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </string>
-                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                                        </textView>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gpE-y5-rQx">
-                                            <rect key="frame" x="238" y="211" width="16" height="22"/>
-                                            <state key="normal" image="tab-federated">
+                                            <rect key="frame" x="268" y="211" width="24" height="22"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="22" id="bxW-QI-ndu"/>
+                                                <constraint firstAttribute="width" constant="24" id="hej-7k-4Ch"/>
+                                            </constraints>
+                                            <state key="normal" image="more">
                                                 <color key="titleColor" red="0.29803922770000002" green="0.29803922770000002" blue="0.29803922770000002" alpha="1" colorSpace="calibratedRGB"/>
                                             </state>
+                                            <connections>
+                                                <action selector="moreButtonTapped:" destination="cHh-EG-Sy4" eventType="touchUpInside" id="fJm-7I-jax"/>
+                                            </connections>
                                         </button>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aNZ-E5-FIN" userLabel="AttachmentView" customClass="AttachmentView" customModule="Liarodon" customModuleProvider="target">
                                             <rect key="frame" x="76" y="196" width="236" height="0.0"/>
@@ -103,11 +131,11 @@
                                         <constraint firstItem="kom-Ot-Ng1" firstAttribute="leading" secondItem="F9x-BH-XYg" secondAttribute="leadingMargin" id="80C-a0-XLa"/>
                                         <constraint firstItem="PS7-in-IDP" firstAttribute="top" secondItem="89r-Uw-8c6" secondAttribute="bottom" id="9S7-TG-aCy"/>
                                         <constraint firstItem="aAt-Ca-Wmo" firstAttribute="top" secondItem="PS7-in-IDP" secondAttribute="bottom" constant="2" id="C1g-lA-mhP"/>
-                                        <constraint firstItem="ihX-K8-OTz" firstAttribute="leading" secondItem="Bad-6f-WBV" secondAttribute="trailing" constant="30" id="F74-3A-sA8"/>
+                                        <constraint firstItem="ihX-K8-OTz" firstAttribute="leading" secondItem="Bad-6f-WBV" secondAttribute="trailing" constant="40" id="F74-3A-sA8"/>
                                         <constraint firstItem="Jek-tu-mNf" firstAttribute="leading" secondItem="aAt-Ca-Wmo" secondAttribute="leading" id="FDm-4r-GJZ"/>
                                         <constraint firstItem="Bad-6f-WBV" firstAttribute="top" secondItem="Jek-tu-mNf" secondAttribute="top" id="GFi-l1-PJM"/>
                                         <constraint firstItem="Xnl-ZK-QpF" firstAttribute="bottom" secondItem="89r-Uw-8c6" secondAttribute="bottom" id="Ns1-s6-UEI"/>
-                                        <constraint firstItem="gpE-y5-rQx" firstAttribute="leading" secondItem="ihX-K8-OTz" secondAttribute="trailing" constant="30" id="SOx-uL-v1K"/>
+                                        <constraint firstItem="gpE-y5-rQx" firstAttribute="leading" secondItem="ihX-K8-OTz" secondAttribute="trailing" constant="40" id="SOx-uL-v1K"/>
                                         <constraint firstItem="89r-Uw-8c6" firstAttribute="bottom" secondItem="5mf-9y-1jz" secondAttribute="bottom" id="ScW-aT-l00"/>
                                         <constraint firstItem="aAt-Ca-Wmo" firstAttribute="leading" secondItem="PS7-in-IDP" secondAttribute="leading" id="Vxe-c5-T2h"/>
                                         <constraint firstItem="Jek-tu-mNf" firstAttribute="top" secondItem="aNZ-E5-FIN" secondAttribute="bottom" constant="15" id="bWD-fl-P79"/>
@@ -120,13 +148,14 @@
                                         <constraint firstItem="ihX-K8-OTz" firstAttribute="top" secondItem="Bad-6f-WBV" secondAttribute="top" id="rex-OL-toR"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="aNZ-E5-FIN" secondAttribute="trailing" id="soI-im-xGx"/>
                                         <constraint firstItem="5mf-9y-1jz" firstAttribute="leading" secondItem="kom-Ot-Ng1" secondAttribute="trailing" constant="8" id="tTD-6h-jCL"/>
-                                        <constraint firstItem="Bad-6f-WBV" firstAttribute="leading" secondItem="Jek-tu-mNf" secondAttribute="trailing" constant="30" id="vd5-IN-qik"/>
+                                        <constraint firstItem="Bad-6f-WBV" firstAttribute="leading" secondItem="Jek-tu-mNf" secondAttribute="trailing" constant="40" id="vd5-IN-qik"/>
                                         <constraint firstItem="89r-Uw-8c6" firstAttribute="leading" secondItem="5mf-9y-1jz" secondAttribute="trailing" constant="6" id="ztp-Fr-Fvd"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="attachmentHeightConstraint" destination="r5f-L7-MS6" id="33a-Mo-AEd"/>
                                     <outlet property="attachmentView" destination="aNZ-E5-FIN" id="iOt-54-e49"/>
+                                    <outlet property="attachmentViewBottomConstraint" destination="bWD-fl-P79" id="Wcf-q4-5Tl"/>
                                     <outlet property="avatarImageView" destination="kom-Ot-Ng1" id="HZK-Vc-GFC"/>
                                     <outlet property="boostButton" destination="Bad-6f-WBV" id="ivp-uh-g9F"/>
                                     <outlet property="contentTextView" destination="aAt-Ca-Wmo" id="uEr-2I-xE1"/>
@@ -174,7 +203,10 @@
         </scene>
     </scenes>
     <resources>
-        <image name="tab-federated" width="16" height="16"/>
+        <image name="boost" width="16" height="16"/>
+        <image name="favourite" width="16" height="16"/>
+        <image name="more" width="16" height="16"/>
+        <image name="reply" width="16" height="16"/>
         <image name="tab-home" width="16" height="16"/>
         <image name="user" width="16" height="16"/>
     </resources>
